--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.2",
     "express": "^4.17.1",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.11",
+    "rbx": "^2.2.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "emailjs-com": "^2.6.3"
   }
 }
