--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "node-sass": "^4.14.1",
+    "node": "12.13.1",
+    "node-sass": "4.14.1",
     "nodemailer": "^6.4.11",
     "rbx": "^2.2.0",
     "react": "^16.13.1",
